Switch metrics from TOML to RON
This feels like a more compact and friendly file format to use for
these types of file, especially since the metrics table will get ever
more complicated as we improve ugly.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ css-color-parser = "0.1.2"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_with = "1.12.0"
 thiserror = "1.0.30"
-toml = "0.5.8"
+ron = "0.7.0"
 sdl2 = { version = "0.35.2", features = ["image"], optional = true }
