--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,10 @@ sdl2 = { version = "0.35.2", features = ["image"], optional = true }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_with = "1.12.0"
 thiserror = "1.0.30"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "font_layout"
+harness = false
