--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ readme = "README.md"
 repository = "https://github.com/ashikun/ugly"
 version = "0.1.0"
 
+[workspace]
+members = ["ugly-fontview"]
+
 [dependencies]
 css-color-parser = "0.1.2"
 ron = "0.8.0"
