--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ sdl2 = { version = "0.36.0", features = ["image"], optional = true }
 serde = { version = "1.0.199", features = ["derive"] }
 serde_with = "3.8.0"
 thiserror = "1.0.59"
+wgpu = "0.20.0"
+winit = "0.30.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
