--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,12 @@ members = ["ugly-fontview"]
 css-color-parser = "0.1.2"
 ron = "0.8.0"
 sdl2 = { version = "0.36.0", features = ["image"], optional = true }
-serde = { version = "1.0.199", features = ["derive"] }
-serde_with = "3.8.0"
-thiserror = "1.0.59"
+serde = { version = "1.0.201", features = ["derive"] }
+serde_with = "3.8.1"
+thiserror = "1.0.60"
 wgpu = "0.20.0"
 winit = "0.30.0"
+bytemuck = { version = "1.15.0", features = ["derive"] }
 
 [dev-dependencies]
 criterion = "0.5.1"
